--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <meta property="og:title" content="Timeline Visualizer - Google Mapタイムライン可視化ツール" />
     <meta property="og:description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をインタラクティブな地図上でアニメーション再生。プライバシー保護で安心。" />
     <meta property="og:image" content="https://timeline.vemi.jp/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://timeline.vemi.jp/og-image.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Timeline Visualizer - Google Mapタイムライン可視化ツール" />
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:site_name" content="Timeline Visualizer by VEMI.jp" />
     
