--- a/index.html
+++ b/index.html
@@ -106,14 +106,7 @@
         "地図テーマ切替（明/暗/衛星）",
         "プライバシー保護（ローカル処理）"
       ],
-      "screenshot": "https://gmap-timeline-visualizer.vemi.jp/og-image.jpg",
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "ratingCount": "100",
-        "bestRating": "5",
-        "worstRating": "1"
-      }
+      "screenshot": "https://gmap-timeline-visualizer.vemi.jp/og-image.jpg"
     }
     </script>
 
