--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gmap-timeline-visualizer.vemi.jp/" />
+    <meta property="og:url" content="https://gmap-tlvr.vemi.jp/" />
     <meta property="og:title" content="Timeline Visualizer - Google Mapタイムライン可視化ツール" />
     <meta property="og:description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をインタラクティブな地図上でアニメーション再生。プライバシー保護で安心。" />
-    <meta property="og:image" content="https://gmap-timeline-visualizer.vemi.jp/og-image.jpg" />
-    <meta property="og:image:secure_url" content="https://gmap-timeline-visualizer.vemi.jp/og-image.jpg" />
+    <meta property="og:image" content="https://gmap-tlvr.vemi.jp/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://gmap-tlvr.vemi.jp/og-image.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -50,17 +50,17 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://gmap-timeline-visualizer.vemi.jp/" />
+    <meta property="twitter:url" content="https://gmap-tlvr.vemi.jp/" />
     <meta property="twitter:title" content="Timeline Visualizer - Google Mapタイムライン可視化ツール" />
     <meta property="twitter:description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をインタラクティブな地図上でアニメーション再生。" />
-    <meta property="twitter:image" content="https://gmap-timeline-visualizer.vemi.jp/og-image.jpg" />
+    <meta property="twitter:image" content="https://gmap-tlvr.vemi.jp/og-image.jpg" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://gmap-timeline-visualizer.vemi.jp/" />
+    <link rel="canonical" href="https://gmap-tlvr.vemi.jp/" />
 
     <!-- Alternate Language (for future i18n) -->
-    <link rel="alternate" hreflang="ja" href="https://gmap-timeline-visualizer.vemi.jp/" />
-    <link rel="alternate" hreflang="x-default" href="https://gmap-timeline-visualizer.vemi.jp/" />
+    <link rel="alternate" hreflang="ja" href="https://gmap-tlvr.vemi.jp/" />
+    <link rel="alternate" hreflang="x-default" href="https://gmap-tlvr.vemi.jp/" />
 
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#3b82f6" />
@@ -81,7 +81,7 @@
       "@type": "WebApplication",
       "name": "Timeline Visualizer",
       "alternateName": ["タイムラインビジュアライザー", "Google Map タイムライン可視化ツール", "ロケーション履歴ビューア"],
-      "url": "https://gmap-timeline-visualizer.vemi.jp/",
+      "url": "https://gmap-tlvr.vemi.jp/",
       "description": "Google Mapのタイムラインデータを可視化するWebアプリケーション。位置情報履歴をインタラクティブな地図上でアニメーション再生できます。",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Web Browser",
@@ -106,7 +106,7 @@
         "地図テーマ切替（明/暗/衛星）",
         "プライバシー保護（ローカル処理）"
       ],
-      "screenshot": "https://gmap-timeline-visualizer.vemi.jp/og-image.jpg"
+      "screenshot": "https://gmap-tlvr.vemi.jp/og-image.jpg"
     }
     </script>
 
@@ -117,7 +117,7 @@
       "@type": "HowTo",
       "name": "Google Mapのタイムラインデータを可視化する方法",
       "description": "Google TakeoutからエクスポートしたロケーションデータをTimeline Visualizerで可視化する手順",
-      "image": "https://gmap-timeline-visualizer.vemi.jp/og-image.jpg",
+      "image": "https://gmap-tlvr.vemi.jp/og-image.jpg",
       "totalTime": "PT5M",
       "estimatedCost": {
         "@type": "MonetaryAmount",
@@ -135,7 +135,7 @@
           "@type": "HowToStep",
           "position": 2,
           "name": "Timeline Visualizerを開く",
-          "text": "Timeline Visualizer（gmap-timeline-visualizer.vemi.jp）にアクセスします。"
+          "text": "Timeline Visualizer（gmap-tlvr.vemi.jp）にアクセスします。"
         },
         {
           "@type": "HowToStep",
@@ -208,7 +208,7 @@
       "@type": "Organization",
       "name": "VEMI.jp",
       "url": "https://vemi.jp",
-      "logo": "https://gmap-timeline-visualizer.vemi.jp/icon.jpg",
+      "logo": "https://gmap-tlvr.vemi.jp/icon.jpg",
       "sameAs": []
     }
     </script>
