--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <title>Timeline Visualizer - Google Mapタイムライン可視化ツール | VEMI.jp</title>
     <meta name="title" content="Timeline Visualizer - Google Mapタイムライン可視化ツール | VEMI.jp" />
     <meta name="description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をインタラクティブな地図上でアニメーション再生。プライバシー保護（データはブラウザ内のみで処理）。無料で簡単に利用可能。" />
-    <meta name="keywords" content="Google Map,タイムライン,位置情報,可視化,トラッキング,GPS,ロケーション履歴,地図,アニメーション,プライバシー,VEMI,Google Takeout,ロケーション履歴エクスポート,移動履歴,行動履歴" />
+    <meta name="keywords" content="Google Map,タイムライン,位置情報,可視化,トラッキング,GPS,ロケーション履歴,地図,アニメーション,プライバシー,VEMI,ロケーション履歴エクスポート,移動履歴,行動履歴" />
     <meta name="author" content="VEMI.jp" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="language" content="Japanese" />
@@ -116,7 +116,7 @@
       "@context": "https://schema.org",
       "@type": "HowTo",
       "name": "Google Mapのタイムラインデータを可視化する方法",
-      "description": "Google TakeoutからエクスポートしたロケーションデータをTimeline Visualizerで可視化する手順",
+      "description": "GoogleマップアプリからエクスポートしたロケーションデータをTimeline Visualizerで可視化する手順",
       "image": "https://gmap-tlvr.vemi.jp/og-image.jpg",
       "totalTime": "PT5M",
       "estimatedCost": {
@@ -128,8 +128,8 @@
         {
           "@type": "HowToStep",
           "position": 1,
-          "name": "Google Takeoutからデータをエクスポート",
-          "text": "Google Takeout（takeout.google.com）にアクセスし、ロケーション履歴データをJSON形式でエクスポートします。"
+          "name": "Googleマップアプリからデータをエクスポート",
+          "text": "スマートフォンのGoogleマップアプリを開き、「設定」→「個人的なコンテンツ」→「タイムライン データをエクスポート」からJSON形式でエクスポートします（デフォルトファイル名: location-history.json）。"
         },
         {
           "@type": "HowToStep",
@@ -186,7 +186,7 @@
           "name": "どのようなデータ形式に対応していますか？",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Google TakeoutからエクスポートされたJSON形式のロケーション履歴データに対応しています。"
+            "text": "GoogleマップアプリからエクスポートされたJSON形式のロケーション履歴データに対応しています。"
           }
         },
         {
