--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
+    <!-- Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' https://unpkg.com;
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: blob: https://*.basemaps.cartocdn.com https://server.arcgisonline.com https://tile.openstreetmap.org;
+      connect-src 'self' https://unpkg.com blob:;
+      worker-src 'self' blob:;
+      font-src 'self';
+      media-src 'self' blob:;
+      object-src 'none';
+      base-uri 'self';
+      form-action 'self';
+    ">
+
     <!-- Preconnect for Performance -->
-    <link rel="preconnect" href="https://tile.openstreetmap.org" />
-    <link rel="preconnect" href="https://unpkg.com" />
     <link rel="preconnect" href="https://basemaps.cartocdn.com" />
-    <link rel="dns-prefetch" href="https://tile.openstreetmap.org" />
-    <link rel="dns-prefetch" href="https://unpkg.com" />
     <link rel="dns-prefetch" href="https://basemaps.cartocdn.com" />
     <link rel="dns-prefetch" href="https://server.arcgisonline.com" />
+    <link rel="dns-prefetch" href="https://unpkg.com" />
 
     <!-- Primary Meta Tags -->
     <title>Timeline Visualizer - Google Mapタイムライン可視化・動画エクスポート | VEMI.jp</title>
