--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <link rel="dns-prefetch" href="https://unpkg.com" />
 
     <!-- Primary Meta Tags -->
-    <title>Timeline Visualizer - Google Mapタイムライン可視化・動画エクスポート | VEMI.jp</title>
-    <meta name="title" content="Timeline Visualizer - Google Mapタイムライン可視化・動画エクスポート | VEMI.jp" />
-    <meta name="description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をインタラクティブな地図上でアニメーション再生し、MP4動画としてエクスポート。プライバシー保護（データはブラウザ内のみで処理）。無料で簡単に利用可能。" />
+    <title>Timeline Visualizer - Google Mapタイムラインアニメーション | VEMI.jp</title>
+    <meta name="title" content="Timeline Visualizer - Google Mapタイムラインアニメーション | VEMI.jp" />
+    <meta name="description" content="Google Mapのタイムラインデータを可視化。位置情報履歴をインタラクティブな地図上でアニメーション再生し、MP4動画としてエクスポート。プライバシー保護（データはブラウザ内のみで処理）。無料で簡単に利用可能。" />
     <meta name="keywords" content="Google Map,タイムライン,位置情報,可視化,トラッキング,GPS,ロケーション履歴,地図,アニメーション,プライバシー,VEMI,ロケーション履歴エクスポート,移動履歴,行動履歴,動画エクスポート,MP4,録画" />
     <meta name="author" content="VEMI.jp" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -49,8 +49,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gmap-tlvr.vemi.jp/" />
-    <meta property="og:title" content="Timeline Visualizer - Google Mapタイムライン可視化・動画エクスポート" />
-    <meta property="og:description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をアニメーション再生し、MP4動画としてエクスポート。プライバシー保護で安心。" />
+    <meta property="og:title" content="Timeline Visualizer - Google Mapタイムラインアニメーション" />
+    <meta property="og:description" content="Google Mapのタイムラインデータを可視化。位置情報履歴をアニメーション再生し、MP4動画としてエクスポート。プライバシー保護で安心。" />
     <meta property="og:image" content="https://gmap-tlvr.vemi.jp/og-image.jpg" />
     <meta property="og:image:secure_url" content="https://gmap-tlvr.vemi.jp/og-image.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
@@ -63,8 +63,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://gmap-tlvr.vemi.jp/" />
-    <meta property="twitter:title" content="Timeline Visualizer - Google Mapタイムライン可視化・動画エクスポート" />
-    <meta property="twitter:description" content="Google Mapのタイムラインデータを美しく可視化。位置情報履歴をアニメーション再生し、MP4動画としてエクスポート。" />
+    <meta property="twitter:title" content="Timeline Visualizer - Google Mapタイムラインアニメーション" />
+    <meta property="twitter:description" content="Google Mapのタイムラインデータを可視化。位置情報履歴をアニメーション再生し、MP4動画としてエクスポート。" />
     <meta property="twitter:image" content="https://gmap-tlvr.vemi.jp/og-image.jpg" />
 
     <!-- Canonical URL -->
